# design-patterns-without-virtual

./: .gitignore  LICENSE  WORKSPACE
abstract-factory/: BUILD.bazel  test_with_virtual.cpp  test_without_virtual.cpp  with_virtual.hpp  without_virtual.hpp
adapter/: test_without_virtual.cpp  without_virtual.hpp
bridge/: test_with_virtual.cpp  test_without_virtual.cpp  with_virtual.hpp  without_virtual.hpp
builder/: BUILD.bazel  test_common.cpp  test_with_virtual.cpp  test_without_virtual.cpp  with_virtual.hpp  without_virtual.hpp
chain-of-responsibility/: BUILD.bazel  test_with_virtual.cpp  test_without_virtual.cpp  with_virtual.hpp  without_virtual.hpp
command/: test_with_virtual.cpp  test_without_virtual.cpp  with_virtual.hpp  without_virtual.hpp
composite/: test_with_virtual.cpp  test_without_virtual.cpp  with_virtual.hpp  without_virtual.hpp
decorator/: test_with_virtual.cpp  test_without_virtual.cpp  with_virtual.hpp  without_virtual.hpp
facade/: BUILD.bazel  test_without_virtual.cpp  without_virtual.hpp
factory/: test_with_virtual.cpp  test_without_virtual.cpp  with_virtual.hpp  without_virtual.hpp
flyweight/: test_without_virtual.cpp  without_virtual.hpp
prototype/: test_with_virtual.cpp  test_without_virtual.cpp  with_virtual.hpp  without_virtual.hpp
proxy/: test_with_virtual.cpp  test_without_virtual.cpp  with_virtual.hpp  without_virtual.hpp
singleton/: README.md
utilities/: BUILD.bazel  rule_of_five.hpp  variables.bzl
