load("//utilities:variables.bzl", "COPTS")

cc_test(
    name = "with_virtual",
    size = "small",
    srcs = [
        "test_with_virtual.cpp",
        "with_virtual.hpp",
    ],
    copts = COPTS,
    deps = [
        "//utilities",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "without_virtual",
    size = "small",
    srcs = [
        "test_without_virtual.cpp",
        "without_virtual.hpp",
    ],
    copts = COPTS,
    deps = ["@com_google_googletest//:gtest_main"],
)
